--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
+  "homepage":"https://Gaybre.github.io/Data-Analytics",
   "name": "dashboard-data-analytics",
+  "author": "Juan Gaybre",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,13 +14,15 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "recharts": "^1.8.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
